upd enterButton styles

--- a/src/components/MyInput/MyInput.module.css
+++ b/src/components/MyInput/MyInput.module.css
@@ -18,4 +18,10 @@
     display: block;
     height: 40px;
     width: 40px;
+    background-color: aquamarine;
+    border: none;
+}
+
+.enterButton:hover {
+   background-color: lightgreen;
 }
