--- a/src/components/MyInput/MyInput.module.css
+++ b/src/components/MyInput/MyInput.module.css
@@ -12,6 +12,9 @@
     height: 40px;
     width: 240px;
     background-color: aqua;
+    text-align: left;
+    display: flex;
+    align-items: center;
 }
 
 .enterButton {
