--- a/src/components/css/MyInput.module.css
+++ b/src/components/css/MyInput.module.css
@@ -11,6 +11,7 @@
 .inputContent {
   height: 40px;
   width: 240px;
+  outline: none;
   background-color: aqua;
   display: flex;
   align-items: center;
